--- a/public/theme-assets/css/theme.css
+++ b/public/theme-assets/css/theme.css
@@ -2189,7 +2189,7 @@ body.loaded .product-card .product-thumbnail a::before {
 .user-options .user-option .user-option-btn .counter {
   position: absolute;
   right: -8px;
-  background-color: #2962ff;
+  background-color: #91118e;
   color: #fff;
   width: 15px;
   height: 15px;
