--- a/views/base.pug
+++ b/views/base.pug
@@ -21,73 +21,22 @@ html(lang="fa")
             <header class="page-header d-md-block d-none">
                 <!-- start banner -->
                 <div class="alert banner-container alert-dismissible fade show" role="alert">
-                    <a href="#" class="banner-placement rounded-0" style="background-image: url(./theme-assets/images/banner/017.jpg);height: 60px;"></a>
+                    <a href="#" class="banner-placement rounded-0" style="background-image: url(./theme-assets/images/banner/029.jpg);height: 60px;"></a>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
                 <!-- end banner -->
-                <!-- start of page-header-top -->
-                <div class="page-header--top">
-                    <div class="container">
-                        <div class="d-flex align-items-center justify-content-between">
-                            <div class="page-header--top-right">
-                                <div class="notification-container notification-light">
-                                    <div class="swiper notification-swiper-slider mb-5">
-                                        <!-- Additional required wrapper -->
-                                        <div class="swiper-wrapper">
-                                            <!-- Slides -->
-                                            <div class="swiper-slide">
-                                                <div class="notification-item">
-                                                    <div class="notification-item--text">خوش آمدید 👋</div>
-                                                </div>
-                                            </div>
-                                            <div class="swiper-slide">
-                                                <div class="notification-item">
-                                                    <div class="notification-item--text">زمستان امسال با تخفیفات ويژه 😍
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="swiper-slide">
-                                                <div class="notification-item">
-                                                    <div class="notification-item--text">به باشگاه مشتریان ما بپیوندید 😎
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="page-header--top-left">
-                                <ul class="nav nav-light justify-content-end">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">وبلاگ</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">پرسش های متداول</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">تماس با ما</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">درباره ما</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- end of page-header-top -->
                 <!-- start of page-header-middle -->
                 <div class="page-header--middle">
                     <div class="container">
                         <div class="d-flex align-items-center justify-content-between">
                             <div class="d-flex align-items-center flex-grow-1 pe-3">
-                                <div class="logo-container logo-box me-3">
+                                <div class="logo-container logo-box me-3 myLogo">
                                     <a href="index-1.html" class="logo">
-                                        <img src="./theme-assets/images/logo.svg" width="120" alt="">
-                                        <span class="logo-text">بررسی،انتخاب و خرید آنلاین</span>
+                                        <img src="./theme-assets/images/lazycoder-logo.png" alt="logo" width="250">
+                                        <span class="logo-text">افراد باهوش هوشمندانه کار می کنند</span>
                                     </a>
                                 </div>
-                                <div class="search-container">
+                                <div class="search-container mySearch">
                                     <form action="#" class="search-form">
                                         <input type="text" class="form-control search-field" placeholder="جستجو کنید..">
                                         <button class="btn btn-primary btn-search btn-action">
@@ -122,7 +71,7 @@ html(lang="fa")
                             </div>
                             <div class="user-options">
                                 <div class="user-option user-option--account">
-                                    <a href="profile.html" class="user-option-btn user-option-btn--account">
+                                    <a href="#" class="user-option-btn user-option-btn--account">
                                         <i class="ri-user-fill icon"></i>
                                         <i class="ri-arrow-down-s-fill icon fs-7 text-muted"></i>
                                     </a>
@@ -133,7 +82,7 @@ html(lang="fa")
                                                     <div class="profile-avatar me-3"><img src="./theme-assets/images/avatar/default.png" alt="avatar">
                                                     </div>
                                                     <div class="profile-info">
-                                                        <a href="#" class="text-decoration-none text-dark fw-bold mb-2">جلال بهرامی راد</a>
+                                                        <a href="profile.html" class="text-decoration-none text-dark fw-bold mb-2">جلال بهرامی راد</a>
                                                         <div class="text-muted fs-7 fw-bold">۰۹xxxxxxxxx</div>
                                                     </div>
                                                 </div>
@@ -157,7 +106,7 @@ html(lang="fa")
                                             </div>
                                             <ul class="nav nav-items-with-icon flex-column">
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="#"><i class="nav-link-icon ri-file-list-3-line"></i> سفارش های من</a>
+                                                    <a class="nav-link" href="profile-my-orders.html"><i class="nav-link-icon ri-file-list-3-line"></i> سفارش های من</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link" href="#"><i class="nav-link-icon ri-copper-coin-fill"></i> باشگاه مشتریان</a>
@@ -170,7 +119,7 @@ html(lang="fa")
                                     </div>
                                 </div>
                                 <div class="user-option">
-                                    <a href="#" class="user-option-btn user-option-btn--account">
+                                    <a href="profile-favorites.html" class="user-option-btn user-option-btn--account">
                                         <i class="ri-heart-3-fill icon"></i>
                                         <span class="counter">۲</span>
                                     </a>
@@ -374,6 +323,10 @@ html(lang="fa")
                                     <a class="nav-link" href="#">درباره ما</a>
                                 </li>
                             </ul>
+
+                            <div class="d-flex pb-1 ai-center color-700 pointer mt-2 pt-2 mt-0-lg pt-0-lg BaseLayoutGeneralLocation_BaseLayoutGeneralLocation__4brmO" data-cro-id="header-location"><div class="d-flex ml-2"><svg style="width: 20px; height: 20px; fill: var(--color-icon-high-emphasis);"><use xlink:href="#pin"></use></svg></div><div class="text-body-2 color-700">لطفا شهر خود را انتخاب کنید</div><div class="d-flex mr-auto color-400 d-none-lg"><svg width="20" height="20" style="width: 24px; height: 24px; fill: var(--color-icon-high-emphasis);"><use xlink:href="#chevronLeft"></use></svg></div></div>
+
+                            
                         </div>
                     </div>
                 </div>
@@ -524,9 +477,8 @@ html(lang="fa")
                 </div>
             </header>
             <!-- start of page-content -->
-            <main class="page-content">
-                <div class="container">
-                    block content
+            <main class="page-content myPad-0">
+                block content
 
                 </div>
                 <!-- end of quick-view-modal -->
