--- a/views/index.pug
+++ b/views/index.pug
@@ -4,75 +4,46 @@ block link
 block title
     title Home
 
-            block content
-                <div class="row mb-3 d-sm-block d-none">
-                    <div class="col-12">
-                        <!-- start of banner -->
-                        <div class="banner-img">
-                            <a href="#"><img src="./theme-assets/images/banner/025.gif" alt="banner"></a>
-                        </div>
-                        <!-- end of banner -->
-                    </div>
-                </div>
-                <div class="row mb-5">
-                    <div class="col-lg-8 mb-lg-0 mb-4">
-                        <!-- start of main-slider -->
-                        <div class="swiper main-swiper-slider">
-                            <!-- Additional required wrapper -->
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide main-swiper-slide">
-                                    <a href="#" style="background-image: url(./theme-assets/images/slider/main/01.jpg);">
-                                        <img src="./theme-assets/images/slider/main/01.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="swiper-slide main-swiper-slide">
-                                    <a href="#" style="background-image: url(./theme-assets/images/slider/main/02.jpg);">
-                                        <img src="./theme-assets/images/slider/main/02.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="swiper-slide main-swiper-slide">
-                                    <a href="#" style="background-image: url(./theme-assets/images/slider/main/03.jpg);">
-                                        <img src="./theme-assets/images/slider/main/03.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="swiper-slide main-swiper-slide">
-                                    <a href="#" style="background-image: url(./theme-assets/images/slider/main/04.jpg);">
-                                        <img src="./theme-assets/images/slider/main/04.jpg" alt="">
-                                    </a>
-                                </div>
-                            </div>
-                            <!-- If we need pagination -->
-                            <div class="swiper-pagination"></div>
+        block content
 
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
-                        </div>
-                        <!-- end of main-slider -->
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="row">
-                            <div class="col-lg-12 col-6 mb-lg-3">
-                                <!-- start of banner -->
-                                <div class="banner-img banner-side-main-slider bg-position-right">
-                                    <a href="#" style="background-image: url(./theme-assets/images/banner/026.jpg);height:220px;">
-                                        <img src="./theme-assets/images/banner/026.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- end of banner -->
+            <div class="row mb-5">
+                <div class="col-lg-12 mb-lg-0 mb-4">
+                    <!-- start of main-slider -->
+                    <div class="swiper main-swiper-slider">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide main-swiper-slide">
+                                <a href="#" style="background-image: url(./theme-assets/images/slider/main/08.jpg);">
+                                    <img src="./theme-assets/images/slider/main/08.jpg" alt="">
+                                </a>
                             </div>
-                            <div class="col-lg-12 col-6">
-                                <!-- start of banner -->
-                                <div class="banner-img banner-side-main-slider bg-position-right">
-                                    <a href="#" style="background-image: url(./theme-assets/images/banner/027.jpg);height:220px;">
-                                        <img src="./theme-assets/images/banner/027.jpg" alt="">
-                                    </a>
-                                </div>
-                                <!-- end of banner -->
+                            <div class="swiper-slide main-swiper-slide">
+                                <a href="#" style="background-image: url(./theme-assets/images/slider/main/06.jpg);">
+                                    <img src="./theme-assets/images/slider/main/06.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="swiper-slide main-swiper-slide">
+                                <a href="#" style="background-image: url(./theme-assets/images/slider/main/07.jpg);">
+                                    <img src="./theme-assets/images/slider/main/07.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="swiper-slide main-swiper-slide">
+                                <a href="#" style="background-image: url(./theme-assets/images/slider/main/04.jpg);">
+                                    <img src="./theme-assets/images/slider/main/04.jpg" alt="">
+                                </a>
                             </div>
                         </div>
+                        <!-- If we need pagination -->
+                        <div class="swiper-pagination"></div>
+
+                        <!-- If we need navigation buttons -->
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
                     </div>
+                    <!-- end of main-slider -->
                 </div>
+            </div>
+            <div class="container">
                 <div class="row mb-5">
                     <div class="col-md-6 mb-lg-0 mb-3">
                         <!-- start of banner -->
