service and controllers for login and register

--- a/ecommerce/views/login-register.pug
+++ b/ecommerce/views/login-register.pug
@@ -34,7 +34,7 @@
                     <form action="#" class="auth-form">
                         <!-- start of form-element -->
                         <div class="form-element-row mb-5">
-                            <input type="text" id="phone" class="form-control" placeholder="شماره موبایل یا ایمیل">
+                            <input name="phone-email" type="text" id="phone" class="form-control" placeholder="شماره موبایل یا ایمیل">
                         </div>
                         <!-- end of form-element -->
                         <!-- start of form-element -->
