cart length in header

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+
+<div class="page-wrapper">
+    <app-header></app-header>
+
+    <!-- start of page-content -->
+    <main class="page-content myPad-0">
+        <router-outlet></router-outlet>
+
+        <!-- end of quick-view-modal -->
+    </main>
+    <!-- end of page-content -->
+
+    <app-footer></app-footer>
+</div>
