--- a/front/src/app/cart/cart.component.html
+++ b/front/src/app/cart/cart.component.html
@@ -1,4 +1,4 @@
-{{cartItems.length}}
+{{cartItems}}
 <div class="container">
     <div class="row" *ngIf="cartItems.length > 0">
         <div class="col-xl-9 col-lg-8">
